Updated delete endpoint
